--- a/assets/_sass/partials/_resume.scss
+++ b/assets/_sass/partials/_resume.scss
@@ -1,5 +1,5 @@
 .resume-content {
-    background: url(http://www.bloomwellbend.com/wp-content/uploads/2015/01/snowboarder-sport-hd-wallpaper-1920x1080-3515.jpg);
+    background: url(http://www.lacouncil.org/images/skiing-wallpaper_1280x800.jpg);
     height: 400px;
     width: 100%;
     display: flex;
